# onigpp

./: .gitignore  .gitmodules  API.md  API.txt  API_ja.txt  CHANGELOG.md  CMakeLists.txt  RE.md  README.md  README_ja.md  RE_ja.md  encodings.h  onigpp.cpp  onigpp.h  onigpp_testw.cpp  supported_encodings.h  topics.txt
.github/: copilot-instructions.md  repository_topics.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
_codeql_build_dir/: libonig.so.5.5.0  onigpp_test  onigpp_testw  test_back  test_options  test_regset  test_syntax  test_utf8  testc  testc_windows  testcu
_codeql_build_dir/oniguruma/: config.h  onig-config
build-off/: benchmark_optimization  cyclic_replace  ecmascript_compat_test  initializer_list_test  iterator_range_ctor_test  match_results_aliases_test  match_results_position_length_test  onigpp_bidir_iterator_test  onigpp_test  onigpp_testw  regex_traits_test  swap_test  test_back  test_options  test_regset  test_syntax  test_utf8  testc  testc_windows  testcu
build-off/Testing/Temporary/: CTestCostData.txt
build_std/: benchmark_optimization  compat_regression_partial_match  compat_test  cyclic_replace  ecmascript_compat_test  ecmascript_multiline_test  error_type_constants_test  initializer_list_test  iterator_range_ctor_test  libonig.so.5.5.0  match_flag_constants_test  match_results_aliases_test  match_results_position_length_test  nosubs_collate_test  nosubs_test  onigpp_bidir_iterator_test  onigpp_test  onigpp_testw  regex_traits_test  sub_match_compat_test  swap_test  test_back  test_options  test_regset  test_syntax  test_utf8  testc  testc_windows  testcu
build_std/Testing/Temporary/: CTestCostData.txt
build_std/oniguruma/: oniguruma.pc
dialog/: CMakeLists.txt  dialog.cpp  dialog_res.rc
dialog/res/: Manifest_1.manifest
src/: encodings.h  onigpp.cpp  onigpp_compat.h
tests/: CMakeLists.txt  backref_test.cpp  benchmark_optimization.cpp  compat_regression_partial_match.cpp  cyclic_replace.cpp  ecmascript_compat_test.cpp  ecmascript_multiline_test.cpp  empty_pattern_test.cpp  error_type_constants_test.cpp  format_literal_test.cpp  initializer_list_test.cpp  iterator_range_ctor_test.cpp  match_flag_constants_test.cpp  match_results_aliases_test.cpp  match_results_compat_test.cpp  match_results_format_test.cpp  match_results_position_length_test.cpp  match_results_ready_test.cpp  nosubs_collate_test.cpp  nosubs_test.cpp  onigpp_bidir_iterator_test.cpp  onigpp_test.cpp  onigpp_testw.cpp  oniguruma_flag_test.cpp  regex_escape_test.cpp  regex_exception_test.cpp  regex_iterator_zero_width_test.cpp  regex_token_iterator_match_results_test.cpp  regex_traits_test.cpp  sub_match_behavior_test.cpp  sub_match_compat_test.cpp  swap_test.cpp  tests.h  use_std_for_tests.h
tests/compat/: CMakeLists.txt  README.md  compat_test.cpp  coverage_candidates.md  patterns.json  patterns_candidate_examples.json
tools/: CMakeLists.txt  re_replace.cpp
wdialog/: dialog.cpp
